# Coorp

./: .gitignore  LICENSE  README.md  def light jonstruktor light.hpp  renderer konsttruktor renderer.cpp  renderer.hpp_konstruktor  scene.hpp konstruktor
Prasentation/: comp.xges  raytracing.pptx
framework/: Box.cpp  Box.hpp  Camera.hpp  Hit.hpp  Light.hpp  Ray.hpp  Scene.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  ambient.hpp  aufgabe7.txt  box.cpp  box.hpp  camera.hpp  color.hpp  findmaterial.hpp  hit.hpp  light.hpp  material.hpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene1.sdf  scene2.sdf  scene3.sdf  sdfloader.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  transform.hpp  util.hpp
source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  prog.cpp  raytracer.cpp  test2.cpp  test_r.cpp  tests.cpp
source/framework/: Makefile  cmake_install.cmake
source/source/: Makefile  cmake_install.cmake  example  raytracer  tests
